2008-05-09  Albert Chu <chu11@llnl.gov>

        * ipmiconsole/src/ipmiconsole/ipmiconsole_config.c
        (_cb_hostname): Fix length check.

	* ipmiconsole/src/ipmiconsole/: Re-arch to make config and
	argument parsing like other tools.
	
2008-05-09  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Add missing option.

	* ipmipower/: Remove unused code.

	* ipmi-locate/src/ipmi-locate.c: Make error output message
	consistent to others.

	* Various minor cleanup.

2008-05-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_outofband,
	ipmi_ctx_open_outofband_2_0): Add checks for hostname length.
	
2008-05-08  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/, ipmi-sensors/, ipmimonitoring/: Fix invalid input
	corner cases.

	* common/src/hostlist.c: Remove internal lib error messages.
	
2008-05-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Change IPMI_ERR_OUTOFRANGE to IPMI_ERR_ERRNUMRANGE
	for consistency to other libraries.
	
2008-05-06  Albert Chu <chu11@llnl.gov>

	* ipmidetect/: Fix manpage dates.

	* common/doc/manpage-common-hostranged-text-shell.man,
	common/doc/manpage-common-hostranged-text-options.man: New files.

	* common/doc/manpage-common-hostranged-text-main.man: Adjust with
	more generic text.

	* common/doc/Makefile.am: Update for new files.

	* Adjust manpages appropriately for new common hostranged manpage
	info.
	
2008-05-05  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/: Support --get-time and --set-time options.
	
2008-05-04  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/cmds/ipmi-sel-cmds.h,
	libfreeipmi/src/cmds/ipmi-sel-cmds.c,
	libfreeipmi/include/freeipmi/api/ipmi-sel-cmds-api.h,
	libfreeipmi/src/api/ipmi-sel-cmds-api.c: Support get and set sel
	time.
	
2008-05-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/cmds/ipmi-device-global-cmds.h,
	libfreeipmi/src/cmds/ipmi-device-global-cmds.c,
	libfreeipmi/include/freeipmi/api/ipmi-device-global-cmds-api.h,